--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -3,15 +3,17 @@
     vertical-align: middle;
     display: table-cell;
     max-height: 90%;
-  
-
-    h1 {
+    margin-left: 100px;
+    
+    
+   h1 {
         font-size: 53px;
         color: rgb(170, 165, 245);
-        margin-top: 0;
-        position: relative;
-        
-
+        margin-bottom: 0;
+       
+       p {
+           color: rgb(170, 165, 245);
+    
     }
 
     ul {
@@ -25,13 +27,12 @@
         margin: 0;
         margin-bottom: 10px;
         list-style: none;
-        display: block;
-        position: relative;
         overflow: hidden;
     }
 
 
-input [type=text], input [type=email] {
+input[type=text], 
+input[type=email] {
     width: 100%;
     height: 50px;
     font-size: 16px;
@@ -39,7 +40,7 @@ input [type=text], input [type=email] {
     padding: 0 20px;
     box-sizing: border-box;
     border: 0;
-    background: rgb(25, 25, 59);
+    background: rgb(50, 50, 124);
  }
 
  textarea {
