--- a/src/components/Design/index.scss
+++ b/src/components/Design/index.scss
@@ -12,9 +12,11 @@
     
 }
 .project-page {
-    top: 50%;
-    position: absolute;
-    width: 40%;
+    width: 35%;
+    vertical-align: middle;
+    display: table-cell;
+    max-height: 90%;
+    margin-left: 100px;
 
     h1 {
         font-size: 53px;
