--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -9,15 +9,16 @@ nav {
     width: 100%;
     padding-right: 5rem;
     padding-top: 0.5rem;
+
    
-   a {
+ .nav_   a {
     font-size: 20px;
     color: rgb(45, 81, 245);
+    display: inline-flex;
     position: relative;
-    display: flex;
     margin: 0.3rem;
     text-decoration: none;
-    padding-left: 0.8rem;
+    padding-left: 0.6rem;
 
     i {
         transition: all 0.3s ease-out;
@@ -36,12 +37,13 @@ nav {
 
     &:after {
         content: '';
-        font-size: 9px;
+        font-size: 10px;
         letter-spacing: 2px;
         position: absolute;
         display: inline-block;
         opacity: 0;
         width: 100%;
+       
         
     }
 
@@ -73,19 +75,21 @@ nav {
 
 
 .vertical_line {
-        border-left: 3px solid rgb(8, 12, 250);       
+        border-left: 3px solid rgb(45, 81, 250);       
         height: 30px;
         display: inline-block;
         padding-left: 0.2rem;
-        margin-left: 1.6rem;
+        margin-left: 2.9rem;
 
         a {
             display: inline-block;
-            font-size: 15px;
+            font-size: 20px;
+            padding-left: 1.5rem;
     
             &:hover svg {
                 color: rgb(149, 156, 218);
             }
         }
     }
+
 }
